# quicknote

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  settingsPage.html  vite.config.ts
src/: App.svelte  SettingsPage.svelte  settingsPage.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
