[package]
name = "obsidian-quicknote"
version = "0.1.0"
description = "Create notes without opening Obsidian"
authors = ["ltsbt"]
license = "MIT"
repository = "htps://github.com/ltsbt/obsidian-quicknote"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "fs-create-dir",
    "fs-read-dir",
    "fs-read-file",
    "fs-write-file",
    "path-all",
    "window-all",
    "dialog-all",
    "system-tray",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
